2016-09-23  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/HTML.pm,
	* tp/Texinfo/Convert/Plaintext.pm,
	* tp/Texinfo/Structuring.pm: Add a "use feature 'unicode_strings'"
	directive.

2016-09-21  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_parse_line_command_args) <@synindex>: 
	Update $self->{'merged_indices'} for any indices already merged
	into the source index.

2016-09-21  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_parse_line_command_args) <@synindex>:
	Remove 'contained_indices' hash when an index is merged into 
	another index.  This simplifies the result in the following 
	situation: Index B is merged into index A, then index C is 
	merged into index B.  Previously, index C would not be in the 
	'contained_indices' of index B: it would only be in those of 
	index A.  Had index C been merged into index B first, index C 
	would have been recorded as being in both.  Eliminating the 
	'contained_indices' hash on the intermediate indices removes the 
	dependency on the order that the '@synindex' commands occurred.

2016-09-20  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_parse_line_command_args): Add a comma 
	to a message.

2016-09-20  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_parse_texi): Don't store the line 
	number for a command defined with @definfoenclose, even if it 
	was previously a built-in command.
	(_parse_line_command_args) <@definfoenclose>: Add a comment 
	warning about redefining a built-in command.

2016-09-19  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Documentlanguages.pm: Regenerate by running
	maintain/regenerate_documentlanguages.pl.
	* README-hacking: Mention running this command for a new 
	release.

2016-09-19  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_check_contents_location): Remove unused 
	function.

2016-09-19  Gavin Smith  <gavinsmith0123@gmail.com>
