@@ -1664,7 +1664,7 @@ $result_errors{'things_before_setfilename'} = [
     'line_nr' => 34,
     'macro' => '',
     'text' => 'perhaps your @top node should be wrapped in @ifnottex rather than @ifinfo?',
-    'type' => 'error continuation'
+    'type' => 'error'
   },
   {
     'error_line' => 'things_before_setfilename.texi:38: warning: entry for index `cp\' outside of any node
