@@ -362,7 +362,7 @@ $result_errors{'table_not_closed_in_menu_comment'} = [
     'line_nr' => 1,
     'macro' => '',
     'text' => 'perhaps your @top node should be wrapped in @ifnottex rather than @ifinfo?',
-    'type' => 'error continuation'
+    'type' => 'error'
   },
   {
     'error_line' => ':8: `@end\' expected `table\', but saw `menu\'
