@@ -878,7 +878,7 @@ $result_errors{'macro_in_menu'} = [
     'line_nr' => 26,
     'macro' => '',
     'text' => 'perhaps your @top node should be wrapped in @ifnottex rather than @ifinfo?',
-    'type' => 'error continuation'
+    'type' => 'error'
   }
 ];
 
