@@ -340,7 +340,7 @@ $result_errors{'detailmenu_in_description'} = [
     'line_nr' => 2,
     'macro' => '',
     'text' => 'perhaps your @top node should be wrapped in @ifnottex rather than @ifinfo?',
-    'type' => 'error continuation'
+    'type' => 'error'
   },
   {
     'error_line' => ':4: @detailmenu seen before first @node
@@ -358,7 +358,7 @@ $result_errors{'detailmenu_in_description'} = [
     'line_nr' => 4,
     'macro' => '',
     'text' => 'perhaps your @top node should be wrapped in @ifnottex rather than @ifinfo?',
-    'type' => 'error continuation'
+    'type' => 'error'
   }
 ];
 
